<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".DoctorPopup">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/firstName"
            android:inputType="textPersonName|textNoSuggestions"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/lastName"
            android:inputType="textPersonName|textNoSuggestions"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_firstName" />

        <EditText
            android:id="@+id/et_doctorId"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/doctorId"
            android:textColor="#fff"
            android:inputType="number|textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastName" />

        <Button
            android:id="@+id/b_submit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/defbutton"
            android:text="@string/submit"
            android:textColor="@color/colorTertiary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_doctorId" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/defbutton"
            android:onClick="finishActivity"
            android:text="@string/cancel"
            android:textColor="@color/colorTertiary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_submit" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>